[gd_scene load_steps=29 format=3 uid="uid://yvssq8ew27vg"]

[ext_resource type="Texture2D" uid="uid://c5o6dcvruas76" path="res://asset/visual/sprite/ui/Frame.png" id="1_5eat1"]
[ext_resource type="Script" path="res://script/ui/pausemenu/PauseMenu.gd" id="1_sjy2u"]
[ext_resource type="FontFile" uid="uid://bekgjs330omnq" path="res://asset/font/DFVNWornout/OpenType-PS/DFVN Wornout.otf" id="2_hnn0q"]
[ext_resource type="FontFile" uid="uid://elb0hu23edej" path="res://asset/font/MontserratAlternates-SemiBold.otf" id="3_n8tg3"]
[ext_resource type="FontFile" uid="uid://32f22jx82rbv" path="res://asset/font/Montserrat-SemiBold.otf" id="3_yo0ak"]
[ext_resource type="FontFile" uid="uid://cytbwbhhwg8yo" path="res://asset/font/MontserratAlternates-Black.otf" id="5_shgr0"]
[ext_resource type="Script" path="res://script/ui/slider/LiveSlider.gd" id="6_klhha"]
[ext_resource type="Script" path="res://script/ui/slider/action/AudioSliderAction.gd" id="7_hpwro"]
[ext_resource type="Texture2D" uid="uid://bfxw5bkwlho1l" path="res://asset/visual/sprite/ui/Bt 1.png" id="8_4i5ci"]
[ext_resource type="Script" path="res://script/ui/button/ButtonBase.gd" id="9_frb1v"]
[ext_resource type="Texture2D" uid="uid://dvehvildaa6o5" path="res://asset/visual/sprite/ui/Bt 2.png" id="9_kd8x1"]
[ext_resource type="Script" path="res://script/ui/button/action/UIAction.gd" id="10_74am2"]

[sub_resource type="LabelSettings" id="LabelSettings_yvcsu"]
font = ExtResource("2_hnn0q")
font_size = 64
font_color = Color(0.411765, 0.219608, 0.0156863, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ikj11"]
bg_color = Color(0.46, 0.0720667, 0.0368, 0)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.858824, 0.2, 0.109804, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1dwjr"]
font = ExtResource("3_n8tg3")
font_size = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ollxo"]
bg_color = Color(0.858824, 0.2, 0.109804, 1)

[sub_resource type="LabelSettings" id="LabelSettings_lfkep"]
font = ExtResource("3_yo0ak")
font_size = 28
font_color = Color(0.462745, 0.0705882, 0.0352941, 1)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_mtx6j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s260k"]
bg_color = Color(1, 0.952941, 0.843137, 1)
border_width_top = 10
border_color = Color(1, 0.952941, 0.843137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8xuvr"]
bg_color = Color(0.462745, 0.0705882, 0.0352941, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nh0kn"]
bg_color = Color(0.858824, 0.2, 0.109804, 1)

[sub_resource type="Resource" id="Resource_yqc0f"]
script = ExtResource("7_hpwro")
audio_bus = "Music"

[sub_resource type="LabelSettings" id="LabelSettings_2cggu"]
font = ExtResource("3_yo0ak")
font_size = 28
font_color = Color(0.462745, 0.0705882, 0.0352941, 1)

[sub_resource type="Resource" id="Resource_h2wo2"]
script = ExtResource("7_hpwro")
audio_bus = "SFX"

[sub_resource type="LabelSettings" id="LabelSettings_04kfq"]
font = ExtResource("5_shgr0")
font_size = 32
font_color = Color(0.462745, 0.0705882, 0.0352941, 1)

[sub_resource type="LabelSettings" id="LabelSettings_mu0ta"]
font = ExtResource("3_yo0ak")
font_size = 24
font_color = Color(0.462745, 0.0705882, 0.0352941, 1)

[sub_resource type="Resource" id="Resource_q01sn"]
script = ExtResource("10_74am2")
action_to_do = 0

[sub_resource type="Resource" id="Resource_q8ip6"]
script = ExtResource("10_74am2")
action_to_do = 2

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_sjy2u")

[node name="PauseMenuPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="CenterContainer" type="CenterContainer" parent="PauseMenuPanel"]
layout_mode = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="PauseMenuPanel/CenterContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_vertical = 0
texture = ExtResource("1_5eat1")
expand_mode = 5
stretch_mode = 4

[node name="MenuName" type="MarginContainer" parent="PauseMenuPanel/CenterContainer/TextureRect"]
layout_mode = 2
offset_right = 800.0
offset_bottom = 735.0
mouse_filter = 2
theme_override_constants/margin_left = 230
theme_override_constants/margin_top = 95
theme_override_constants/margin_right = 230
theme_override_constants/margin_bottom = 525

[node name="CenterContainer" type="CenterContainer" parent="PauseMenuPanel/CenterContainer/TextureRect/MenuName"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="PauseMenuPanel/CenterContainer/TextureRect/MenuName/CenterContainer"]
layout_mode = 2
text = "TÙY CHỈNH"
label_settings = SubResource("LabelSettings_yvcsu")

[node name="Options" type="MarginContainer" parent="PauseMenuPanel/CenterContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SettingsPanel" type="MarginContainer" parent="PauseMenuPanel/CenterContainer/TextureRect/Options"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 180
theme_override_constants/margin_top = 270
theme_override_constants/margin_right = 180
theme_override_constants/margin_bottom = 75

[node name="PanelContainer" type="MarginContainer" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel"]
layout_mode = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer"]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="VSplitContainer" type="VBoxContainer" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer"]
layout_mode = 2
mouse_filter = 2

[node name="SettingsChoice" type="MarginContainer" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 30
theme_override_constants/margin_bottom = 30

[node name="CenterContainer" type="CenterContainer" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/SettingsChoice"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/SettingsChoice/CenterContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 7

[node name="MarginContainer" type="MarginContainer" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/SettingsChoice/CenterContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/SettingsChoice/CenterContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
ratio = 3.3897
stretch_mode = 0

[node name="Panel" type="Panel" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/SettingsChoice/CenterContainer/HBoxContainer/MarginContainer/AspectRatioContainer"]
custom_minimum_size = Vector2(140, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ikj11")

[node name="MarginContainer" type="MarginContainer" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/SettingsChoice/CenterContainer/HBoxContainer/MarginContainer/AspectRatioContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 12

[node name="CenterContainer" type="CenterContainer" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/SettingsChoice/CenterContainer/HBoxContainer/MarginContainer/AspectRatioContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/SettingsChoice/CenterContainer/HBoxContainer/MarginContainer/AspectRatioContainer/MarginContainer/CenterContainer"]
layout_mode = 2
text = "              "
label_settings = SubResource("LabelSettings_1dwjr")

[node name="MarginContainer2" type="MarginContainer" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/SettingsChoice/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/SettingsChoice/CenterContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
ratio = 4.2701
stretch_mode = 0

[node name="Panel" type="Panel" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/SettingsChoice/CenterContainer/HBoxContainer/MarginContainer2/AspectRatioContainer"]
custom_minimum_size = Vector2(140, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ollxo")

[node name="CenterContainer" type="CenterContainer" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/SettingsChoice/CenterContainer/HBoxContainer/MarginContainer2/AspectRatioContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/SettingsChoice/CenterContainer/HBoxContainer/MarginContainer2/AspectRatioContainer/CenterContainer"]
layout_mode = 2
text = "Âm thanh"
label_settings = SubResource("LabelSettings_1dwjr")

[node name="MarginContainer3" type="MarginContainer" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/SettingsChoice/CenterContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/SettingsChoice/CenterContainer/HBoxContainer/MarginContainer3"]
layout_mode = 2
mouse_filter = 2
ratio = 4.2701
stretch_mode = 0

[node name="Panel" type="Panel" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/SettingsChoice/CenterContainer/HBoxContainer/MarginContainer3/AspectRatioContainer"]
custom_minimum_size = Vector2(140, 50)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ikj11")

[node name="CenterContainer" type="CenterContainer" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/SettingsChoice/CenterContainer/HBoxContainer/MarginContainer3/AspectRatioContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/SettingsChoice/CenterContainer/HBoxContainer/MarginContainer3/AspectRatioContainer/CenterContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_1dwjr")

[node name="MarginContainer2" type="MarginContainer" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/MarginContainer2"]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="MusicVolune" type="MarginContainer" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/MarginContainer2/VBoxContainer/MusicVolune"]
layout_mode = 2
theme_override_constants/separation = 50
dragger_visibility = 1

[node name="Label" type="Label" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/MarginContainer2/VBoxContainer/MusicVolune/HSplitContainer"]
layout_mode = 2
text = "Âm nhạc"
label_settings = SubResource("LabelSettings_lfkep")

[node name="MarginContainer" type="MarginContainer" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/MarginContainer2/VBoxContainer/MusicVolune/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="CenterContainer" type="CenterContainer" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/MarginContainer2/VBoxContainer/MusicVolune/HSplitContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/MarginContainer2/VBoxContainer/MusicVolune/HSplitContainer/MarginContainer/CenterContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/MarginContainer2/VBoxContainer/MusicVolune/HSplitContainer/MarginContainer/CenterContainer/MarginContainer"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
theme_override_icons/grabber = SubResource("PlaceholderTexture2D_mtx6j")
theme_override_styles/slider = SubResource("StyleBoxFlat_s260k")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_8xuvr")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_nh0kn")
min_value = 0.001
max_value = 1.0
step = 0.001
value = 1.0
script = ExtResource("6_klhha")
action = SubResource("Resource_yqc0f")

[node name="SFXVolune" type="MarginContainer" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HSplitContainer" type="HSplitContainer" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/MarginContainer2/VBoxContainer/SFXVolune"]
layout_mode = 2
mouse_filter = 2
dragger_visibility = 1

[node name="Label" type="Label" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/MarginContainer2/VBoxContainer/SFXVolune/HSplitContainer"]
layout_mode = 2
text = "Âm hiệu ứng"
label_settings = SubResource("LabelSettings_2cggu")

[node name="MarginContainer" type="MarginContainer" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/MarginContainer2/VBoxContainer/SFXVolune/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/MarginContainer2/VBoxContainer/SFXVolune/HSplitContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/MarginContainer2/VBoxContainer/SFXVolune/HSplitContainer/MarginContainer/CenterContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HSlider" type="HSlider" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/MarginContainer2/VBoxContainer/SFXVolune/HSplitContainer/MarginContainer/CenterContainer/MarginContainer"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
theme_override_icons/grabber = SubResource("PlaceholderTexture2D_mtx6j")
theme_override_styles/slider = SubResource("StyleBoxFlat_s260k")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_8xuvr")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_nh0kn")
min_value = 0.001
max_value = 1.0
step = 0.001
value = 1.0
script = ExtResource("6_klhha")
action = SubResource("Resource_h2wo2")

[node name="SFXVolume" type="MarginContainer" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Panel3" type="Panel" parent="PauseMenuPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/MarginContainer2/VBoxContainer/SFXVolume"]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="InventoryPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="InventoryPanel"]
layout_mode = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="InventoryPanel/CenterContainer"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2
texture = ExtResource("1_5eat1")
expand_mode = 5
stretch_mode = 4

[node name="MenuName" type="MarginContainer" parent="InventoryPanel/CenterContainer/TextureRect"]
layout_mode = 2
offset_right = 800.0
offset_bottom = 735.0
mouse_filter = 2
theme_override_constants/margin_left = 230
theme_override_constants/margin_top = 95
theme_override_constants/margin_right = 230
theme_override_constants/margin_bottom = 525

[node name="CenterContainer" type="CenterContainer" parent="InventoryPanel/CenterContainer/TextureRect/MenuName"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="InventoryPanel/CenterContainer/TextureRect/MenuName/CenterContainer"]
layout_mode = 2
text = "VẬT PHẨM"
label_settings = SubResource("LabelSettings_yvcsu")

[node name="Options" type="MarginContainer" parent="InventoryPanel/CenterContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SettingsPanel" type="MarginContainer" parent="InventoryPanel/CenterContainer/TextureRect/Options"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 180
theme_override_constants/margin_top = 270
theme_override_constants/margin_right = 180
theme_override_constants/margin_bottom = 75

[node name="PanelContainer" type="MarginContainer" parent="InventoryPanel/CenterContainer/TextureRect/Options/SettingsPanel"]
layout_mode = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="InventoryPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer"]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="VSplitContainer" type="VBoxContainer" parent="InventoryPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer"]
layout_mode = 2
mouse_filter = 2

[node name="SettingsChoice" type="MarginContainer" parent="InventoryPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 20

[node name="MarginContainer" type="MarginContainer" parent="InventoryPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/SettingsChoice"]
layout_mode = 2
mouse_filter = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="InventoryPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/SettingsChoice/MarginContainer"]
layout_mode = 2
mouse_filter = 2
stretch_mode = 1

[node name="Panel" type="Panel" parent="InventoryPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/SettingsChoice/MarginContainer/AspectRatioContainer"]
custom_minimum_size = Vector2(140, 50)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ikj11")

[node name="MarginContainer" type="MarginContainer" parent="InventoryPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/SettingsChoice/MarginContainer/AspectRatioContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 12

[node name="CenterContainer" type="CenterContainer" parent="InventoryPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/SettingsChoice/MarginContainer/AspectRatioContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="InventoryPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/SettingsChoice/MarginContainer/AspectRatioContainer/MarginContainer/CenterContainer"]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="InventoryPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/SettingsChoice"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer2" type="MarginContainer" parent="InventoryPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="InventoryPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/MarginContainer2"]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/MarginContainer2"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 30

[node name="MusicVolune" type="MarginContainer" parent="InventoryPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="InventoryPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/MarginContainer2/VBoxContainer/MusicVolune"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="InventoryPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/MarginContainer2/VBoxContainer/MusicVolune/CenterContainer"]
layout_mode = 2
text = "(Trống)"
label_settings = SubResource("LabelSettings_04kfq")

[node name="SFXVolune" type="MarginContainer" parent="InventoryPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="InventoryPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/MarginContainer2/VBoxContainer/SFXVolune"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="InventoryPanel/CenterContainer/TextureRect/Options/SettingsPanel/PanelContainer/VSplitContainer/MarginContainer2/VBoxContainer/SFXVolune/CenterContainer"]
layout_mode = 2
text = "Bạn chưa có vật phẩm nào!"
label_settings = SubResource("LabelSettings_mu0ta")

[node name="MenuButtons" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MenuButtons"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15

[node name="HBoxContainer" type="HBoxContainer" parent="MenuButtons/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2

[node name="PauseButton" type="TextureButton" parent="MenuButtons/MarginContainer/HBoxContainer"]
texture_filter = 6
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
texture_normal = ExtResource("8_4i5ci")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("9_frb1v")
action = SubResource("Resource_q01sn")

[node name="InventoryButton" type="TextureButton" parent="MenuButtons/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
texture_normal = ExtResource("9_kd8x1")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("9_frb1v")
action = SubResource("Resource_q8ip6")
